--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.2",
-    "express": "^4.16.3",
-    "web-push": "^3.3.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "uuid": "^7.0.3",
+    "uuidv4": "^6.0.7",
+    "web-push": "^3.4.3"
   }
 }
